checkbox spacing fixed

--- a/src/assets/scss/core/custom-forms/_custom-checkbox.scss
+++ b/src/assets/scss/core/custom-forms/_custom-checkbox.scss
@@ -3,9 +3,14 @@
 //
 
 .custom-checkbox {
+    padding-left: 2rem;
     .custom-control-input ~ .custom-control-label {
         cursor: pointer;
         font-size: $font-size-sm;
+        &::before,
+        &::after {
+            left: -2em;
+        }
     }
 
     .custom-control-input {
